Fixed async bugs

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <script src="game/gameObjects/Player.js"></script>
     <script src="game/gameObjects/UI.js"></script>
     <!-- SCENES -->
-    <script src="game/scenes/Lobby.js"></script>
-    <script src="game/scenes/Game.js"></script>
+    <script src="game/scenes/LobbyScene.js"></script>
+    <script src="game/scenes/GameScene.js"></script>
     <!-- GM -->
     <script src="game/index.js"></script>
   </head>
